<?xml version="1.0"?>
<package>
  <name>olof_client_ros</name>
  <version>0.0.0</version>
  <description>The olof_client_ros package</description>
  
  <maintainer email="oloho254@student.liu.se">Olof Holmberg</maintainer>

  <license>LGPLv3</license>

  <author email="oloho254@student.liu.se">Olof Holmberg</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
  
</package>
